Add support for OpenID connect metadata discovery
Get OAuth 2 endpoints configuration from
`./well-known/openid-configuration` endpoint on the server startup.
This simplifies the configuration for OIDC compliant servers.